--- a/project2D/Project2D.vcxproj.filters
+++ b/project2D/Project2D.vcxproj.filters
@@ -14,6 +14,12 @@
     <Filter Include="Grid">
       <UniqueIdentifier>{5ef423b3-84f9-4396-971f-df3b92d41c92}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Decision Tree">
+      <UniqueIdentifier>{c94c858d-15e1-4006-9c72-9aaa39d3356c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Behaviour StateMachine">
+      <UniqueIdentifier>{7915dc61-e1f4-4dcf-a082-1700df54ef15}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameState.cpp">
@@ -67,6 +73,15 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Object Creation</Filter>
     </ClCompile>
+    <ClCompile Include="DecisionTree.cpp">
+      <Filter>Decision Tree</Filter>
+    </ClCompile>
+    <ClCompile Include="BehaviourState.cpp">
+      <Filter>Behaviour StateMachine</Filter>
+    </ClCompile>
+    <ClCompile Include="BSM.cpp">
+      <Filter>Behaviour StateMachine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
@@ -119,6 +134,18 @@
     </ClInclude>
     <ClInclude Include="Enemy.h">
       <Filter>Object Creation</Filter>
+    </ClInclude>
+    <ClInclude Include="DecisionTree.h">
+      <Filter>Decision Tree</Filter>
+    </ClInclude>
+    <ClInclude Include="BehaviourState.h">
+      <Filter>Behaviour StateMachine</Filter>
+    </ClInclude>
+    <ClInclude Include="BSM.h">
+      <Filter>Behaviour StateMachine</Filter>
+    </ClInclude>
+    <ClInclude Include="BehaviourStatetypes.h">
+      <Filter>Behaviour StateMachine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
