--- a/project2D/Project2D.vcxproj
+++ b/project2D/Project2D.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application2D.cpp" />
+    <ClCompile Include="Behaviours.cpp" />
     <ClCompile Include="BehaviourState.cpp" />
     <ClCompile Include="BSM.cpp" />
     <ClCompile Include="Edge.cpp" />
@@ -26,15 +27,18 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Seek.cpp" />
     <ClCompile Include="SeekDecision.cpp" />
     <ClCompile Include="SeekState.cpp" />
     <ClCompile Include="Setting.cpp" />
     <ClCompile Include="SplashState.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="StateManager.cpp" />
+    <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
+    <ClInclude Include="Behaviours.h" />
     <ClInclude Include="BehaviourState.h" />
     <ClInclude Include="BehaviourStatetypes.h" />
     <ClInclude Include="BSM.h" />
@@ -50,12 +54,15 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="PauseState.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="real.h" />
+    <ClInclude Include="Seek.h" />
     <ClInclude Include="SeekDecision.h" />
     <ClInclude Include="SeekState.h" />
     <ClInclude Include="Setting.h" />
     <ClInclude Include="SplashState.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateManager.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3F428D0C-1CC8-47C3-818A-A3C2972C74C9}</ProjectGuid>
