--- a/project2D/Project2D.vcxproj.filters
+++ b/project2D/Project2D.vcxproj.filters
@@ -100,6 +100,15 @@
     <ClCompile Include="Flee.cpp">
       <Filter>Behaviours</Filter>
     </ClCompile>
+    <ClCompile Include="Alignment.cpp">
+      <Filter>Behaviours</Filter>
+    </ClCompile>
+    <ClCompile Include="Cohesion.cpp">
+      <Filter>Behaviours</Filter>
+    </ClCompile>
+    <ClCompile Include="Separation.cpp">
+      <Filter>Behaviours</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
@@ -181,6 +190,15 @@
       <Filter>Behaviours</Filter>
     </ClInclude>
     <ClInclude Include="Flee.h">
+      <Filter>Behaviours</Filter>
+    </ClInclude>
+    <ClInclude Include="Alignment.h">
+      <Filter>Behaviours</Filter>
+    </ClInclude>
+    <ClInclude Include="Cohesion.h">
+      <Filter>Behaviours</Filter>
+    </ClInclude>
+    <ClInclude Include="Separation.h">
       <Filter>Behaviours</Filter>
     </ClInclude>
   </ItemGroup>
