--- a/project2D/Project2D.vcxproj.filters
+++ b/project2D/Project2D.vcxproj.filters
@@ -17,9 +17,6 @@
     <Filter Include="Behaviour StateMachine">
       <UniqueIdentifier>{7915dc61-e1f4-4dcf-a082-1700df54ef15}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Behaviour StateMachine\Decision Tree">
-      <UniqueIdentifier>{c94c858d-15e1-4006-9c72-9aaa39d3356c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Behaviours">
       <UniqueIdentifier>{9c23d927-70b6-43c5-8c6f-d1666da522e3}</UniqueIdentifier>
     </Filter>
@@ -85,9 +82,6 @@
     <ClCompile Include="SeekState.cpp">
       <Filter>Behaviour StateMachine</Filter>
     </ClCompile>
-    <ClCompile Include="SeekDecision.cpp">
-      <Filter>Behaviour StateMachine\Decision Tree</Filter>
-    </ClCompile>
     <ClCompile Include="Vector2.cpp">
       <Filter>Object Creation</Filter>
     </ClCompile>
@@ -111,6 +105,9 @@
     </ClCompile>
     <ClCompile Include="PathFollowing.cpp">
       <Filter>Behaviours</Filter>
+    </ClCompile>
+    <ClCompile Include="FleeState.cpp">
+      <Filter>Behaviour StateMachine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -177,9 +174,6 @@
     <ClInclude Include="SeekState.h">
       <Filter>Behaviour StateMachine</Filter>
     </ClInclude>
-    <ClInclude Include="SeekDecision.h">
-      <Filter>Behaviour StateMachine\Decision Tree</Filter>
-    </ClInclude>
     <ClInclude Include="Vector2.h">
       <Filter>Object Creation</Filter>
     </ClInclude>
@@ -206,6 +200,9 @@
     </ClInclude>
     <ClInclude Include="PathFollowing.h">
       <Filter>Behaviours</Filter>
+    </ClInclude>
+    <ClInclude Include="FleeState.h">
+      <Filter>Behaviour StateMachine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
